[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/imagens/flatDark11.png" type="Texture" id=1]
[ext_resource path="res://script/game_over.gd" type="Script" id=2]
[ext_resource path="res://assets/sons/minimize_006.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/sons/switch_001.ogg" type="AudioStream" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/KdamThmorPro-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://fonts/KdamThmorPro-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://fonts/KdamThmorPro-Regular.ttf"

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://fonts/KdamThmorPro-Regular.ttf"

[sub_resource type="DynamicFont" id=8]
size = 44
font_data = SubResource( 7 )

[node name="game_over" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 601.0
margin_bottom = 798.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_end" type="Label" parent="."]
margin_left = 1.0
margin_top = 136.0
margin_right = 596.0
margin_bottom = 344.0
custom_colors/font_color = Color( 1, 0.0117647, 0.0117647, 1 )
custom_fonts/font = SubResource( 2 )
text = "l_over"
align = 1
valign = 1
uppercase = true

[node name="lbl_points" type="Label" parent="."]
margin_left = 226.0
margin_top = 374.0
margin_right = 270.0
margin_bottom = 421.0
custom_fonts/font = SubResource( 4 )
text = "l_P"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_num" type="Label" parent="."]
margin_left = 330.0
margin_top = 374.0
margin_right = 370.0
margin_bottom = 421.0
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_btn" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.02083
margin_left = 197.688
margin_top = 562.0
margin_right = 237.688
margin_bottom = 576.0
text = "b_new"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="btn_new" type="TouchScreenButton" parent="."]
position = Vector2( 137, 557 )
scale = Vector2( 7.625, 1.75 )
normal = ExtResource( 1 )

[node name="lbl_new" type="Label" parent="."]
margin_left = 149.0
margin_top = 564.0
margin_right = 493.0
margin_bottom = 633.0
custom_fonts/font = SubResource( 8 )
text = "b_new"
align = 1
valign = 1

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="music2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="pressed" from="btn_new" to="." method="btn_pressed"]
[connection signal="finished" from="music2" to="." method="finished"]
